--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,9 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
+            "allowedCommonJsDependencies": [
+        "sweetalert2"
+      ],
             "assets": [
               {
                 "glob": "**/*",
